--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -1,23 +1,77 @@
-/* Write your CSS here */
-.list {
+.todo-item {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  margin-bottom: 15px;
+}
+
+.title {
+  color: #000000;
+  font-family: 'Roboto';
+  flex: 1;
+  display: block;
+}
+
+.editedInput {
+  width: 400px;
+  height: 30px;
+}
+
+.title-is-checked {
+  color: #000000;
+  font-family: 'Roboto';
+  font-size: 16px;
+  flex: 1;
+  display: block;
+  text-decoration: line-through;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
+.input-element {
+  width: 60%;
+  display: flex;
   align-items: center;
 }
 
-.para {
-  flex-wrap: wrap;
-  margin-right: 15px;
-}
-.button {
-  background-color: transparent;
-  border-color: #ff0b37;
+.delete-btn {
+  background-color: #ffffff;
   color: #ff0b37;
-  border-style: solid;
-  height: 35px;
-  width: 85px;
-  border-radius: 5px;
-  margin-left: 15px;
-  margin-right: 15px;
+  font-family: 'Roboto';
+  font-size: 12px;
+  border-radius: 8px;
+  border: 1px solid #ff0b37;
+  padding-top: 4px;
+  padding-left: 8px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+  margin-left: 16px;
+  outline: none;
+  cursor: pointer;
+}
+
+.edit-btn {
+  color: #046af8;
+  border: 1px solid #046af8;
+}
+
+.save-btn {
+  color: #15be09;
+  border: 1px solid #15be09;
+}
+
+@media screen and (min-width: 768px) {
+  .delete-btn {
+    font-size: 18px;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    margin-left: 32px;
+  }
 }
